Fix scroll bar on mobile devices

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -81,6 +81,7 @@
 
 html,
 body {
+  height: 100%;
   max-width: 100vw;
   overflow-x: hidden;
 }
@@ -93,6 +94,10 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+#__next {
+  height: 100%;
 }
 
 a {
